Fix sidebar overflowing at top sometimes

--- a/assets/scss/_sidebar-toc.scss
+++ b/assets/scss/_sidebar-toc.scss
@@ -7,7 +7,7 @@
     @supports (position: sticky) {
         position: sticky;
         top: 4rem;
-        height: calc(100vh - 4rem);
+        height: calc(100vh - 3rem);
         overflow-y: auto;
     }
 
